--- a/index.html
+++ b/index.html
@@ -158,26 +158,18 @@
       <div class="footer">
         <div class="contact">
           <p>
-            Tom Preston-Werner
+            Joey Forsman
             <br />
-            Cofounder of
-            <a href="https://github.com/">GitHub</a>,
-            <a href="https://chatterbug.com/">Chatterbug</a>
-            <br />
-            tom@mojombo.com
+            Mathematician and AI enthusiast
           </p>
         </div>
         <div class="contact">
           <p>
-            <a href="https://github.com/mojombo/">github.com/mojombo</a><br />
-            <a href="https://twitter.com/mojombo/">twitter.com/mojombo</a><br />
+            <a href="https://github.com/beanshadow008">github.com/beanshadow008</a><br />
+            <a href="https://twitter.com/beanshadow">twitter.com/beanshadow</a>
           </p>
         </div>
-        <div class="rss">
-          <a href="https://feeds.feedburner.com/tom-preston-werner">
-            <img src="/images/rss.png" alt="Subscribe to RSS Feed" />
-          </a>
-        </div>
+        <!-- RSS link removed -->
       </div>
     </div>
   </body>
