--- a/translation_bacon.html
+++ b/translation_bacon.html
@@ -2,18 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>RedwoodJS’ Next Epoch: All In on React Server Components</title>
-    <meta name="author" content="Tom Preston-Werner" />
-    <link
-      href="https://feeds.feedburner.com/tom-preston-werner"
-      rel="alternate"
-      title="Tom Preston-Werner"
-      type="application/atom+xml"
-    />
-    <meta
-      name="readability-verification"
-      content="QCzSs992GxmRYRKVpPeZ6LE2tS8aYKxsSSQKV8YM"
-    />
+    <title>Lorem Ipsum Test</title>
+    <meta name="author" content="Joey Forsman" />
 
     <!-- syntax highlighting CSS -->
     <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
@@ -29,14 +19,14 @@
   <body>
     <div class="site">
       <div class="title">
-        <a href="/">Tom Preston-Werner</a>
+        <a href="/">Joey Forsman</a>
         <a class="extra" href="/">home</a>
       </div>
 
       <div id="post">
-<h1 id="redwoodjs-next-epoch-all-in-on-react-server-components">RedwoodJS’ Next Epoch: All In on React Server Components</h1>
+<h1 id="translation_bacon">Lorem Ipsum Test</h1>
 
-<p class="meta">26 Oct 2023 - </p>
+<p class="meta">26 Oct 2023</p>
 
 <!-- <p><em><a href="https://redwoodjs.com/">RedwoodJS</a> is the full-stack JS/TS web framework designed to help you grow from side project to startup.</em></p>
 -->
